--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>git</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Hello GIT</h1>
+	<h1>Hello GIT!</h1>
     <p>
     	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -14,6 +15,7 @@
     	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    <hr>
     <p>
     	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
